# python-skat-webservice

./: README.md  pyproject.toml
.github/workflows/: Linting.yml
src/python_skat_webservice/: __init__.py  common.py  indkomst_oplysning_person_hent.py  soap_signer.py
