[project]
name = "python-skat-webservice"
version = "0.1.0"
description = "This project makes it easier to use the SKAT webservices."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lxml>=5.3.2",
    "requests>=2.32.3",
    "xmlsec>=1.3.15",
]

[project.scripts]
python-skat-webservice = "python_skat_webservice:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
